gitflow-feature-stash: #8-devtools
강의 목적으로 devtools 를 쓰는 이유는 생산성이 높아지기 때문  (automatic restart, live load 등 )

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,9 +3,11 @@ management:
     web:
       exposure:
         include: "*"
+server:
+  port: 8081
 
 ashley:
   korean:
     hello: "안녕하세요"
   english:
-    hello: "HELLO"
+    hello: "HELLO000"
