#8 - MainController 연습코드정리 (dev tools를 공부했다)
#8 dev tools를 공부했다 개발 단계에서 endpoint 로 actuator  확인

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,3 +11,10 @@ ashley:
     hello: "안녕하세요"
   english:
     hello: "HELLO000"
+#--------------
+#spring:
+#  profiles:
+#    active:
+#      on-profile:
+#        -produnction
+#        -real
