--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,6 +11,10 @@ ashley:
     hello: "안녕하세요"
   english:
     hello: "HELLO000"
+
+spring:
+  thymeleaf:
+
 #--------------
 #spring:
 #  profiles:
